# edgetpu_roscpp

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  edgetpu_roscpp_melodic.rosinstall  package.xml
include/edgetpu_roscpp/: deep_object_detection.h  image_resize.h  image_resize.h~  single_object_tracking_by_deep_detection.h
launch/: classify_image_test.launch  detection_from_stream.launch  detection_with_cocompiled_modes.launch  object_detection_test.launch  single_object_tracking_by_detection.launch
plugins/nodelet/: edgetpu_rosccp_nodelet.xml
scripts/: install_additional_video_data.py  install_test_data.py
src/: classify_image.cc  classify_image.cpp  deep_object_detection.cpp  object_detection.cpp  single_object_tracking_by_deep_detection.cpp
src/utils/: image_resize.cpp  image_resize.cpp~
training/: Dockerfile  README.md  run.bash
training/launch/: export_images_from_rosbag.launch
training/scripts/: constants.sh  convert_checkpoint_to_edgetpu_tflite.sh  create_object_labels.py  create_pipeline_config.py  prepare_checkpoint_and_dataset.sh  retrain_detection_model.sh
training/scripts/configs/: pipeline_mobilenet_v1_ssd_retrain_last_few_layers.config  pipeline_mobilenet_v1_ssd_retrain_whole_model.config  pipeline_mobilenet_v2_ssd_retrain_last_few_layers.config  pipeline_mobilenet_v2_ssd_retrain_whole_model.config
