<?xml version="1.0"?>
<package format="2">
  <name>edgetpu_roscpp</name>
  <version>0.0.0</version>
  <description>The edgetpu_roscpp package</description>

  <maintainer email="chou@jsk.imi.i.u-toyko.ac.jp">moju zhao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>abseil_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>jsk_perception</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_topic_tools</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>jsk_data</exec_depend>
  <exec_depend>python-gdown-pip</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/edgetpu_rosccp_nodelet.xml"/>
  </export>

</package>
